@@ -1,6 +1,7 @@
 from ucommon 5.2.1 to 5.2.2
 - use strcoll for sorting when possible
 - common c++ object linking, maps, and ref counted pointers added back
+- stringpager supports ordered add and sorting
 
 from ucommon 5.2.0 to 5.2.1
 - fixed issue with static linking initialization order
